--- a/osa7/blogbackend/package.json
+++ b/osa7/blogbackend/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "jest": "^26.6.3",
+    "prettier": "2.7.1",
     "supertest": "^6.2.2"
   },
   "jest": {
