--- a/osa7/blogfront/package.json
+++ b/osa7/blogfront/package.json
@@ -3,11 +3,15 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "axios": "^0.21.1",
+        "@reduxjs/toolkit": "^1.8.3",
+        "axios": "^0.21.4",
         "prop-types": "^15.8.1",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
+        "react": "^18.0.2",
+        "react-dom": "^18.0.2",
+        "react-redux": "^8.0.2",
         "react-scripts": "4.0.1",
+        "redux": "^4.2.0",
+        "redux-thunk": "^2.4.1",
         "web-vitals": "^0.2.4"
     },
     "scripts": {
@@ -42,10 +46,10 @@
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
-        "cypress": "^9.5.4",
+        "cypress": "^9.7.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-cypress": "^2.12.1",
-        "eslint-plugin-jest": "^26.1.4",
+        "eslint-plugin-jest": "^26.7.0",
         "jest-watch-typeahead": "^0.6.5",
         "prettier": "2.7.1"
     }
