--- a/osa7/blogfront/package.json
+++ b/osa7/blogfront/package.json
@@ -7,6 +7,7 @@
         "axios": "^0.21.4",
         "prop-types": "^15.8.1",
         "react": "^18.0.2",
+        "react-bootstrap": "^2.5.0",
         "react-dom": "^18.0.2",
         "react-redux": "^8.0.2",
         "react-router-dom": "^6.3.0",
