--- a/osa8/Books/package.json
+++ b/osa8/Books/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^3.10.3",
+    "@apollo/server": "^4.9.3",
+    "apollo-server": "^3.12.1",
+    "apollo-server-core": "^3.12.1",
     "dotenv": "^16.3.1",
-    "graphql": "^16.6.0",
+    "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "mongoose-unique-validator": "^4.0.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.22"
   }
 }
