--- a/osa8/Books/package.json
+++ b/osa8/Books/package.json
@@ -14,8 +14,11 @@
     "@apollo/server": "^4.9.3",
     "apollo-server": "^3.12.1",
     "apollo-server-core": "^3.12.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "graphql": "^16.8.1",
+    "graphql-ws": "^5.14.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "mongoose-unique-validator": "^4.0.0",
