--- a/osa8/Books/package.json
+++ b/osa8/Books/package.json
@@ -12,16 +12,19 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.9.3",
+    "@graphql-tools/schema": "^10.0.0",
     "apollo-server": "^3.12.1",
     "apollo-server-core": "^3.12.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.14.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "mongoose-unique-validator": "^4.0.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "ws": "^8.14.2"
   }
 }
