--- a/osa9/HealthBackend/package.json
+++ b/osa9/HealthBackend/package.json
@@ -7,15 +7,20 @@
         "ts-node": "ts-node",
         "test": "test",
         "calculateBmi": "ts-node bmiCalculator.ts",
-        "calculateExercises": "ts-node exerciseCalculator.ts"
+        "calculateExercises": "ts-node exerciseCalculator.ts",
+        "start": "ts-node index.ts",
+        "dev": "ts-node-dev index.ts"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "express": "^4.18.2",
         "ts-node": "^10.9.1",
         "typescript": "^5.2.2"
     },
     "devDependencies": {
-        "@types/node": "^20.8.10"
+        "@types/express": "^4.17.21",
+        "@types/node": "^20.8.10",
+        "ts-node-dev": "^2.0.0"
     }
 }
