--- a/osa9/HealthBackend/package.json
+++ b/osa9/HealthBackend/package.json
@@ -9,11 +9,13 @@
         "calculateBmi": "ts-node bmiCalculator.ts",
         "calculateExercises": "ts-node exerciseCalculator.ts",
         "start": "ts-node index.ts",
-        "dev": "ts-node-dev index.ts"
+        "dev": "ts-node-dev index.ts",
+        "lint": "eslint --ext .ts"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.20.2",
         "express": "^4.18.2",
         "ts-node": "^10.9.1",
         "typescript": "^5.2.2"
@@ -21,6 +23,9 @@
     "devDependencies": {
         "@types/express": "^4.17.21",
         "@types/node": "^20.8.10",
+        "@typescript-eslint/eslint-plugin": "^6.12.0",
+        "@typescript-eslint/parser": "^6.12.0",
+        "eslint": "^8.54.0",
         "ts-node-dev": "^2.0.0"
     }
 }
