--- a/osa9/patientorBackend/package.json
+++ b/osa9/patientorBackend/package.json
@@ -20,7 +20,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/uuid": "^9.0.7",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "uuid": "^9.0.1"
   }
 }
