--- a/osa9/patientorBackend/package.json
+++ b/osa9/patientorBackend/package.json
@@ -1,28 +1,28 @@
 {
-  "scripts": {
-    "tsc": "tsc",
-    "dev": "ts-node-dev index.ts",
-    "lint": "eslint --ext .ts .",
-    "start": "node build/index.js"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.2"
-  },
-  "name": "patientorbackend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "Sami Tuomela",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@types/uuid": "^9.0.7",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "uuid": "^9.0.1"
-  }
+    "scripts": {
+        "tsc": "tsc",
+        "dev": "ts-node-dev src/index.ts",
+        "lint": "eslint --ext .ts .",
+        "start": "node build/index.js"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
+        "@typescript-eslint/eslint-plugin": "^6.12.0",
+        "@typescript-eslint/parser": "^6.12.0",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^5.3.2"
+    },
+    "name": "patientorbackend",
+    "version": "1.0.0",
+    "main": "index.js",
+    "author": "Sami Tuomela",
+    "license": "ISC",
+    "description": "",
+    "dependencies": {
+        "@types/uuid": "^9.0.7",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "uuid": "^9.0.1"
+    }
 }
