--- a/osa9/patientorBackend/package.json
+++ b/osa9/patientorBackend/package.json
@@ -3,7 +3,7 @@
         "tsc": "tsc",
         "dev": "ts-node-dev src/index.ts",
         "lint": "eslint --ext .ts .",
-        "start": "node build/index.js"
+        "start": "node build/src/index.js"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
